force-app/main/default/objects/Case/fields/FS_NombreCuenta__c.field-meta.xml
<CustomField>
    <fullName>FS_NombreCuenta__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Cuenta</label>
    <type>Text</type>
</CustomField>