force-app/main/default/objects/Case/fields/FS_NombreTipoRegistro__c.field-meta.xml
<CustomField>
    <fullName>FS_NombreTipoRegistro__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Tipo de Registro</label>
    <type>Text</type>
</CustomField>