force-app/main/default/objects/Case/fields/FS_NotasReunionSatisfaccion__c.field-meta.xml
<CustomField>
    <fullName>FS_NotasReunionSatisfaccion__c</fullName>
    <label>Notas de Reunión Satisfacción</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>