force-app/main/default/objects/Case/fields/FS_Notificaciones__c.field-meta.xml
<CustomField>
    <fullName>FS_Notificaciones__c</fullName>
    <label>Notificaciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimación Macro</fullName>
            </value>
            <value>
                <fullName>Documento de Especificación Funcional</fullName>
            </value>
            <value>
                <fullName>En Propuesta Económica</fullName>
            </value>
            <value>
                <fullName>En Espera de Respuesta del Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>