force-app/main/default/objects/Case/fields/FS_NumeroHorasSolicitud__c.field-meta.xml
<CustomField>
    <fullName>FS_NumeroHorasSolicitud__c</fullName>
    <label>Número de horas de solicitud</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>