force-app/main/default/objects/Case/fields/FS_NumeroRequerimientosNuevo__c.field-meta.xml
<CustomField>
    <fullName>FS_NumeroRequerimientosNuevo__c</fullName>
    <label>Número de Requerimientos Nuevo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>