force-app/main/default/objects/Case/fields/FS_OrigenCaso__c.field-meta.xml
<CustomField>
    <fullName>FS_OrigenCaso__c</fullName>
    <label>Origen del Caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interno</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
                <default>true</default>
                <label>Web</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>