force-app/main/default/objects/Case/fields/FS_PropietarioCasoSolucionCortoPlazo__c.field-meta.xml
<CustomField>
    <fullName>FS_PropietarioCasoSolucionCortoPlazo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario Caso Solución a Corto Plazo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos3</relationshipName>
    <type>Lookup</type>
</CustomField>