force-app/main/default/objects/Case/fields/FS_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>FS_Proyecto__c</fullName>
    <label>Proyecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FSAH001 - FISA SYSTEM AHIBA</fullName>
            </value>
            <value>
                <fullName>FSBD001 - FISA SYSTEM BDI</fullName>
            </value>
            <value>
                <fullName>FSBL001 - FISA SYSTEM BLH</fullName>
            </value>
            <value>
                <fullName>FSCA100 - FISA SYSTEM CARIBE</fullName>
            </value>
            <value>
                <fullName>FSCM001 - FISA SYSTEM CREDITO MAESTRO</fullName>
            </value>
            <value>
                <fullName>FSCN001 - FISA SYSTEM CONSORCIO</fullName>
            </value>
            <value>
                <fullName>FSCR001 - FISA SYSTEM CREDICORP</fullName>
            </value>
            <value>
                <fullName>FSDE126 - HD28911 MEJORA EN LA DESCRIPCIÓN DE GLOSAS EN ESTA</fullName>
            </value>
            <value>
                <fullName>FSDE130 - DESARROLLO FISA SYSTEM - OMNIA MAF CHILE 1000 D/H</fullName>
            </value>
            <value>
                <fullName>FSDE135 - HD29457 ASIGNACIÓN DE TASAS DE INTERÉS.</fullName>
            </value>
            <value>
                <fullName>FSDE136 - HD29458 COBRO DE ADMINISTRACIÓN MENSUAL CLIENTES</fullName>
            </value>
            <value>
                <fullName>FSDE138 - SOPORTE INSTALACION HD 28957 &quot;PROYECTO CONFIRMACIO</fullName>
            </value>
            <value>
                <fullName>FSDE144 - HD29836 INSTALACIÓN SOFTWARE BASE PARA SERVIDORES</fullName>
            </value>
            <value>
                <fullName>FSDE147 - HD29772 FUNCIONALIDAD NUEVO FACTOR DE SEGURIDA</fullName>
            </value>
            <value>
                <fullName>FSDE149 - PRECONTRATADO BDI 400 DIAS</fullName>
            </value>
            <value>
                <fullName>FSDE150 - PRECONTRATADO BLH 300 DIAS</fullName>
            </value>
            <value>
                <fullName>FSDE155 - HD30108 BANCO CARIBE CVN 18 (CRYPTOGRAM VERSION NU</fullName>
            </value>
            <value>
                <fullName>FSDE158 - HD30189 HABILITAR EL PROCESO DE TRANSACCIONES</fullName>
            </value>
            <value>
                <fullName>FSDE163 - HD30292 PRELACION DE PAGOS</fullName>
            </value>
            <value>
                <fullName>FSDE167 - HD30583 CONTABILIDAD AUTOMÁTICA</fullName>
            </value>
            <value>
                <fullName>FSDE173 - PRECONTRATADO CREDICORP POR 1000 DÍAS</fullName>
            </value>
            <value>
                <fullName>FSDE179 - HD31294 CC_MAF_RETENIDOS</fullName>
            </value>
            <value>
                <fullName>FSDE189 - HD30956 CONSULTA SOBRE UPGRADE DE VERSIÓN DE SO BD</fullName>
            </value>
            <value>
                <fullName>FSDE193 - HD30414 CARGA DE LOTES POR BCRD PARA REALIZAR PAGO</fullName>
            </value>
            <value>
                <fullName>FSDE205 - HD30960 PROCESO MASIVO DE RENOVACIÓN DE CERTIFICAD</fullName>
            </value>
            <value>
                <fullName>FSDE209 - PRECONTRATADOS CONSORCIO 800 DIAS</fullName>
            </value>
            <value>
                <fullName>FSDE210 - HD30209 DIFERIMIENTO DE COMISIONES PARA OPERACIONE</fullName>
            </value>
            <value>
                <fullName>FSDE221 - HD31607 SERVICIO DE SOPORTE DE MANTENIMIENTO PREDI</fullName>
            </value>
            <value>
                <fullName>FSDE228 - HD31852 MODIFICACIONES PROCESO DE EMBOZO Y ACT</fullName>
            </value>
            <value>
                <fullName>FSDE229 - FASE DE ESTABILIZACIÓN PROYECTO MAF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>