force-app/main/default/objects/Case/fields/FS_Quiere_Finalizar_la_Atencion_del_Caso__c.field-meta.xml
<CustomField>
    <fullName>FS_Quiere_Finalizar_la_Atencion_del_Caso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Quiere Finalizar la Atención del Caso?</label>
    <type>Checkbox</type>
</CustomField>