force-app/main/default/objects/Case/fields/FS_Referencia__c.field-meta.xml
<CustomField>
    <fullName>FS_Referencia__c</fullName>
    <label>Referencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>