force-app/main/default/objects/Case/fields/FS_RespuestaCliente__c.field-meta.xml
<CustomField>
    <fullName>FS_RespuestaCliente__c</fullName>
    <label>Respuesta Cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>