force-app/main/default/objects/Case/fields/FS_ReunionCSAT__c.field-meta.xml
<CustomField>
    <fullName>FS_ReunionCSAT__c</fullName>
    <label>Reunión CSAT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>