force-app/main/default/objects/Case/fields/FS_ReunionesCliente__c.field-meta.xml
<CustomField>
    <fullName>FS_ReunionesCliente__c</fullName>
    <label>Reuniones con Clientes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>