force-app/main/default/objects/Case/fields/FS_RolPropietario__c.field-meta.xml
<CustomField>
    <fullName>FS_RolPropietario__c</fullName>
    <formula>Owner:User.UserRole.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rol Propietario</label>
    <type>Text</type>
</CustomField>