force-app/main/default/objects/Case/fields/FS_SubEstadoAnterior__c.field-meta.xml
<CustomField>
    <fullName>FS_SubEstadoAnterior__c</fullName>
    <label>Sub Estado Anterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>