force-app/main/default/objects/Case/fields/FS_SubEstadoQueSePideInformacion__c.field-meta.xml
<CustomField>
    <fullName>FS_SubEstadoQueSePideInformacion__c</fullName>
    <label>Sub Estado que se Pide Información</label>
    <length>255</length>
    <type>Text</type>
</CustomField>