force-app/main/default/objects/Case/fields/FS_SubModulo__c.field-meta.xml
<CustomField>
    <fullName>FS_SubModulo__c</fullName>
    <label>Sub Módulo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Modulo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clientes (Módulo 2)</fullName>
            </value>
            <value>
                <fullName>Parametros Generales (Módulo 1)</fullName>
            </value>
            <value>
                <fullName>Seguridades (Modulo 90)</fullName>
            </value>
            <value>
                <fullName>Cuentas de Ahorro</fullName>
            </value>
            <value>
                <fullName>Cuentas Corrientes</fullName>
            </value>
            <value>
                <fullName>Cuentas de Acumulación</fullName>
            </value>
            <value>
                <fullName>Cuentas Nostro</fullName>
            </value>
            <value>
                <fullName>Cuentas Líneas de Crédito</fullName>
            </value>
            <value>
                <fullName>Depositos a Plazo Fijo</fullName>
            </value>
            <value>
                <fullName>Créditos de Consumo/Comerciales/Personales</fullName>
            </value>
            <value>
                <fullName>Crédito Automotriz</fullName>
            </value>
            <value>
                <fullName>Líneas de Crédito</fullName>
            </value>
            <value>
                <fullName>Crédito Hipotecario</fullName>
            </value>
            <value>
                <fullName>Crédito Hipotecario con Letras</fullName>
            </value>
            <value>
                <fullName>Cartas de crédito</fullName>
            </value>
            <value>
                <fullName>Cobranzas</fullName>
            </value>
            <value>
                <fullName>Avales</fullName>
            </value>
            <value>
                <fullName>Boletas de garantía</fullName>
            </value>
            <value>
                <fullName>Títulos y valores</fullName>
            </value>
            <value>
                <fullName>Cupones</fullName>
            </value>
            <value>
                <fullName>Tarjetas Nominadas</fullName>
            </value>
            <value>
                <fullName>Tarjetas Innominadas</fullName>
            </value>
            <value>
                <fullName>Calendarización Y Procesos Masivos</fullName>
            </value>
            <value>
                <fullName>Administración multicanal</fullName>
            </value>
            <value>
                <fullName>Documentos</fullName>
            </value>
            <value>
                <fullName>Autorizaciones</fullName>
            </value>
            <value>
                <fullName>Seguridad</fullName>
            </value>
            <value>
                <fullName>Notificaciones</fullName>
            </value>
            <value>
                <fullName>Componente generales</fullName>
            </value>
            <value>
                <fullName>Herramientas de Desarrollo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>