force-app/main/default/objects/Case/fields/FS_SurveyAnswered__c.field-meta.xml
<CustomField>
    <fullName>FS_SurveyAnswered__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contesto la encuesta</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>