force-app/main/default/objects/Case/fields/FS_Tarifa_DH__c.field-meta.xml
<CustomField>
    <fullName>FS_Tarifa_DH__c</fullName>
    <label>Tarifa D/H</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>