force-app/main/default/objects/Case/fields/FS_TipoIncidente__c.field-meta.xml
<CustomField>
    <fullName>FS_TipoIncidente__c</fullName>
    <label>Tipo de Incidente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Puntual</fullName>
            </value>
            <value>
                <fullName>Definitivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>