force-app/main/default/objects/Case/fields/FS_Total_USD_PE__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_USD_PE__c</fullName>
    <formula>FS_Dias_Aprobados__c * FS_Tarifa_DH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total USD PE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>