force-app/main/default/objects/Case/fields/FS_UrlAmbientePruebas__c.field-meta.xml
<CustomField>
    <fullName>FS_UrlAmbientePruebas__c</fullName>
    <label>Url ambiente de pruebas</label>
    <type>Url</type>
</CustomField>