force-app/main/default/objects/Case/fields/FS_URLCodigoFuente__c.field-meta.xml
<CustomField>
    <fullName>FS_URLCodigoFuente__c</fullName>
    <label>URL del Código Fuente</label>
    <type>Url</type>
</CustomField>