force-app/main/default/objects/Case/fields/FS_URLDisenioTecnico__c.field-meta.xml
<CustomField>
    <fullName>FS_URLDisenioTecnico__c</fullName>
    <label>URL del diseño técnico</label>
    <type>Url</type>
</CustomField>