force-app/main/default/objects/Case/fields/FS_URLEvidenciaPruebas__c.field-meta.xml
<CustomField>
    <fullName>FS_URLEvidenciaPruebas__c</fullName>
    <label>URL evidencia de pruebas</label>
    <type>Url</type>
</CustomField>