force-app/main/default/objects/Case/fields/FS_URLParcheCliente__c.field-meta.xml
<CustomField>
    <fullName>FS_URLParcheCliente__c</fullName>
    <label>URL parche de cliente</label>
    <type>Url</type>
</CustomField>