force-app/main/default/objects/Case/fields/FS_URLPlanPruebas__c.field-meta.xml
<CustomField>
    <fullName>FS_URLPlanPruebas__c</fullName>
    <label>URL del plan de pruebas</label>
    <type>Url</type>
</CustomField>