force-app/main/default/objects/Case/fields/FS_URLResultadoAnalasis__c.field-meta.xml
<CustomField>
    <fullName>FS_URLResultadoAnalasis__c</fullName>
    <label>URL de resultado de analísis</label>
    <type>Url</type>
</CustomField>