force-app/main/default/objects/Case/fields/FS_URLSolucionDefinitiva__c.field-meta.xml
<CustomField>
    <fullName>FS_URLSolucionDefinitiva__c</fullName>
    <label>URL de la solución definitiva</label>
    <type>Url</type>
</CustomField>