force-app/main/default/objects/Case/fields/FS_UsuarioAprobacionSolucionRelease__c.field-meta.xml
<CustomField>
    <fullName>FS_UsuarioAprobacionSolucionRelease__c</fullName>
    <label>Usuario Aprobación de Solución Releas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>