force-app/main/default/objects/Case/fields/FS_UsuarioAprobador1erCosto__c.field-meta.xml
<CustomField>
    <fullName>FS_UsuarioAprobador1erCosto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Aprobador 1er Costo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>