force-app/main/default/objects/Case/fields/FS_UsuarioAprobadorDT__c.field-meta.xml
<CustomField>
    <fullName>FS_UsuarioAprobadorDT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Aprobador Diseño Técnico</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos4</relationshipName>
    <type>Lookup</type>
</CustomField>