force-app/main/default/objects/Case/fields/FS_UsuarioAprobadorInstalacionParcheRele__c.field-meta.xml
<CustomField>
    <fullName>FS_UsuarioAprobadorInstalacionParcheRele__c</fullName>
    <label>Usuario Aprobador Instalación Parche Rel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>