force-app/main/default/objects/Case/fields/FS_UsuarioAprobadorPlanPruebas__c.field-meta.xml
<CustomField>
    <fullName>FS_UsuarioAprobadorPlanPruebas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Aprobador Plan de Pruebas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos2</relationshipName>
    <type>Lookup</type>
</CustomField>