force-app/main/default/objects/Case/fields/FS_UsuarioAprobadorSolucion__c.field-meta.xml
<CustomField>
    <fullName>FS_UsuarioAprobadorSolucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Aprobador Solución</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos5</relationshipName>
    <type>Lookup</type>
</CustomField>