force-app/main/default/objects/Case/fields/FS_UsuarioAprobadorSolucionIPN2__c.field-meta.xml
<CustomField>
    <fullName>FS_UsuarioAprobadorSolucionIPN2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Aprobador Solución IP-N2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos1</relationshipName>
    <type>Lookup</type>
</CustomField>