force-app/main/default/objects/Case/recordTypes/FS_Incidente.recordType-meta.xml
<RecordType>
    <fullName>FS_Incidente</fullName>
    <active>true</active>
    <businessProcess>FS_CasoIncidente</businessProcess>
    <label>Incidente</label>
</RecordType>