force-app/main/default/objects/Case/recordTypes/FS_Requerimiento.recordType-meta.xml
<RecordType>
    <fullName>FS_Requerimiento</fullName>
    <active>true</active>
    <businessProcess>FS_Requerimiento</businessProcess>
    <label>Requerimiento</label>
</RecordType>